1.Added tags container element 2.fixed z-index in strategy builder page 3.fixed some issues with add strategy dialog and delete dialog 4.modified design of preview post in community create post section

--- a/src/components/community/aq-community-postdetail.html
+++ b/src/components/community/aq-community-postdetail.html
@@ -51,7 +51,7 @@
             --aq-community-postdetail-content-padding:10px 20px 10px 10px;
         }
         .header-container {
-            background-color: #fff;
+            background-color: transparent;
             height: 55px;
             position: relative;
             left:-20px;
